# 42-python-modules

module0/ex4/: ft_water_reminder.py
module0/ex5/: ft_count_harvest_recursive.py
module0/ex7/: ft_seed_inventory.py
module00/ex1/: ft_plot_area.py
module00/ex2/: ft_harvest_total.py
module00/ex4/: ft_water_reminder.py
module00/ex6/: ft_garden_summary.py
module01/ex0/: ft_garden_intro.py
module01/ex5/: ft_plant_types.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_different_errors.py
module02/ex4/: ft_raise_errors.py
module03/ex2/: ft_coordinate_system.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module04/ex1/: ft_archive_creation.py
module05/ex1/: data_stream.py
module05/ex2/: nexus_pipeline.py
module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_sacred_scroll.py
module06/alchemy/: __init__.py  potions.py
module07/ex0/: __init__.py  main.py
module07/ex1/: SpellCard.py  main.py
module07/ex2/: Combatable.py  __init__.py  main.py
module07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  __init__.py  main.py
module07/ex4/: main.py
module08/ex0/: construct.py
module08/ex1/: loading.py  pyproject.toml
module08/ex2/: .gitignore
module09/ex2/: space_crew.py
module1/ex1/: ft_garden_data.py
module1/ex2/: ft_plant_growth.py
module1/ex3/: ft_plant_factory.py
module1/ex4/: ft_garden_security.py
module1/ex5/:  ft_plant_types.py  ft_plant_types.py
module6/: ft_pathway_debate.py
module7/: __init__.py
(+42 files in other folders)
