[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "loading-programs"
version = "1.0.0"
description = "Loading Programs: Dependency Management"
authors = ["Thiago Queiroz"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
requests = "^2.31.0"